fix: alignment in homepage (#119)
test: fix test by replacing myjson url with github gist

--- a/src/components/Layout/footer.scss
+++ b/src/components/Layout/footer.scss
@@ -2,7 +2,8 @@
 
 .footer {
   background-color: $brand-navy;
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
   @media print {
     display: none;
